# WRApp

./: .gitignore  CMakeLists.txt  WRApplication.cpp  WRApplication_variables.cpp  readme.md
.github/workflows/: github-actions.yml
docs/: .gitignore  doxyfile  wrapp_doxygen_tags.tag
docs/html/: AddIOToPython_8hpp.html  AddIOToPython_8hpp__incl.map  AddIOToPython_8hpp__incl.md5  AddIOToPython_8hpp_source.html  AddMultiprocessingToPython_8hpp.html  AddMultiprocessingToPython_8hpp__incl.map  AddMultiprocessingToPython_8hpp__incl.md5  AddMultiprocessingToPython_8hpp_source.html  AddNumericToPython_8hpp.html  AddNumericToPython_8hpp__incl.map  AddNumericToPython_8hpp__incl.md5  AddNumericToPython_8hpp_source.html  AddPipesToPython_8hpp.html  AddPipesToPython_8hpp__incl.map  AddPipesToPython_8hpp__incl.md5  AddPipesToPython_8hpp_source.html  AddUtilsToPython_8hpp.html  AddUtilsToPython_8hpp__incl.map  AddUtilsToPython_8hpp__incl.md5  AddUtilsToPython_8hpp_source.html  AsyncSolver_8py.html  AttachDebugger_8hpp.html  AttachDebugger_8hpp.js  AttachDebugger_8hpp_source.html  Attribute_8py.html  Attribute_8py.js  CheckpointID_8hpp.html  CheckpointID_8hpp__incl.map  CheckpointID_8hpp__incl.md5  CheckpointID_8hpp_source.html  CheckpointProcess_8py.html  CheckpointProcess_8py.js  Checkpoint_8py.html  CoSimCoupling_8py.html  ContainerProxy_8hpp.html  ContainerProxy_8hpp.js  ContainerProxy_8hpp__incl.map  ContainerProxy_8hpp__incl.md5  ContainerProxy_8hpp_source.html  ConvergenceAccelerator_8py.html  (+1606 more)
include/wr_application/: WRApplication.hpp
python_bindings/: AddIOToPython.cpp  AddMultiprocessingToPython.cpp  AddNumericToPython.cpp  AddPipesToPython.cpp  AddUtilsToPython.cpp  wr_python_application.cpp
python_scripts/: LaunchAnalysis.py  Launcher.py  MPIUtils.py  RuntimeRegistry.py  TestCase.py  ToDoException.py  WRAppClass.py  __init__.py  __init__.pyi  __main__.py  cli.py  mpi_utilities.py  registry_utils.py
python_scripts/async_analysis/: AsyncSolver.py  CoSimCoupling.py  CoupledAsyncSolver.py  SolutionStageScope.py  SynchronizationPredicate.py  WrappedAnalysis.py  WrappedSolver.py  __init__.py  hookers.py
python_scripts/checkpoint/: Checkpoint.py  CheckpointProcess.py  HDF5Snapshot.py  HDF5SnapshotIO.py  Snapshot.py  SnapshotIO.py  SnapshotInMemory.py  SnapshotInMemoryIO.py  __init__.py  processes.py
python_scripts/coupling/: CoSimCoupling.py  ConvergenceAccelerator.py  ConvergenceCriterion.py  Dataset.py  DatasetTransfer.py  DatasetTransform.py  __init__.py
python_scripts/utilities/: ContainerProxy.py  Debug.py  GenerateHDF5Journal.py  GenerateXDMF.py  StringMaps.py  (+7 more)
tests/: CheckpointProcess_test.py  Checkpoint_test.py  ConvergenceAccelerator_test.py  DatasetTransfer_test.py  DatasetTransform_test.py  EntityProxy_test.py  IntervalUtility_test.py  Journal_test.py  MDPAGenerator.py  MakeTestMDPAs.py  ModelPredicatePipe_test.py  PipedModelPredicate_test.py  PlaceholderPattern_test.py  Snapshot_test.py  cpp_test.py  test_WRApp.py  test_WRApp_mpi.py  test_WRApplication.py  test_WRApplication_mpi.py
(+159 files in other folders)
